--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <!-- navbar end -->
             <div class="max-w-screen-xl mx-auto">
                 <div class="xl:flex xl:justify-between x:items-center xl:pt-48">
-                    <div class="w-80 mx-auto border px-5 py-5 h-auto">
+                    <div class="w-80 mx-auto border px-5 py-5">
                            <div class="border-b-2 border-gray-200">
                                <h1 class="pb-3 text-xl font-semibold text-gray-800">Shop By Categories</h1>
                            </div>
@@ -420,30 +420,63 @@
                             </div>
                             <div class="hidden" id="content2">
                                 <div class="flex justify-between items-center">
-                                    <div class="text-center relative">
+                                    <div class="text-center relative max-w-6xl">
                                         <a href="#" class="">
-                                            <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="">
+                                            <img class="h-auto w-full relative" src="images/product-1.jpg" alt="">
                                             <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                                            <div class="flex items-center justify-left absolute bottom-20 left-6">
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-1 group transition duration-400">
+                                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-1 group transition duration-400">
+                                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-1 group transition duration-400">
+                                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                            </div>
                                         </a>
                                         <div class="pt-2">
                                             <a href="#" class="text-md text-gray-800 hover:text-red-600">Dutchman's Breeches</a>
                                             <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
                                         </div>
                                     </div>
-                                    <div class="text-center relative">
+                                    <div class="text-center relative max-w-6xl">
                                         <a href="#" class="">
-                                            <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="">
+                                            <img class="h-auto w-full relative" src="images/product-1.jpg" alt="">
                                             <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                                            <div class="flex items-center justify-left absolute bottom-20 left-6">
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-1 group transition duration-400">
+                                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-1 group transition duration-400">
+                                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-1 group transition duration-400">
+                                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                            </div>
                                         </a>
                                         <div class="pt-2">
                                             <a href="#" class="text-md text-gray-800 hover:text-red-600">Dutchman's Breeches</a>
                                             <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
                                         </div>
                                     </div>
-                                    <div class="text-center relative">
+                                    <div class="text-center relative max-w-6xl">
                                         <a href="#" class="">
-                                            <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="">
+                                            <img class="h-auto w-full relative" src="images/product-1.jpg" alt="">
                                             <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                                            <div class="flex items-center justify-left absolute bottom-20 left-6">
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-1 group transition duration-400">
+                                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-1 group transition duration-400">
+                                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                                <a href="#" class="bg-white rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-1 group transition duration-400">
+                                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                                </a>
+                                            </div>
                                         </a>
                                         <div class="pt-2">
                                             <a href="#" class="text-md text-gray-800 hover:text-red-600">Dutchman's Breeches</a>
