--- a/index.html
+++ b/index.html
@@ -367,8 +367,11 @@
                 <div class="md:flex md:justify-between lg:flex lg:justify-between xl:flex lg:justify-between items-center leading-loose">
                     <div class="">
                         <ul class="flex justify-left items-center">
-                            <li class="">
+                            <li class="xl:visible lg:visible md:visible hidden">
                                 <a href="#" class="bg-gray-200 px-2 md:px-6 lg:px-6 xl:px-6 py-2 lg:3 xl:py-3 text-gray-800 rounded hover:bg-red-600 transition duration-400 hover:text-white relative"><i class="fas fa-angle-left"></i> Prev</a>
+                            </li>
+                            <li class="xl:invisible lg:invisible md:invisible block">
+                                <a href="#" class="bg-gray-200 px-2 md:px-6 lg:px-6 xl:px-6 py-2 lg:3 xl:py-3 text-gray-800 rounded hover:bg-red-600 transition duration-400 hover:text-white relative"><i class="fas fa-angle-left"></i></a>
                             </li>
                             <li class="">
                                 <a href="#" class="bg-red-600 px-2 lg:px-4 xl:px-4 py-2 lg:py-3 xl:py-3 text-gray-100 rounded ml-2 text-sm">1</a>
@@ -385,8 +388,11 @@
                             <li class="">
                                 <a href="#" class="bg-gray-200 px-2 lg:px-4 xl:px-4 py-2 lg:py-3 xl:py-3 text-gray-800 rounded ml-2 text-sm hover:bg-red-600 transition duration-400 hover:text-white">10</a>
                             </li>
-                            <li class="">
+                            <li class="xl:visible lg:visible md:visible hidden">
                                 <a href="#" class="bg-gray-800 px-2 md:px-6 lg:px-6 xl:px-6 py-2 lg:py-3 xl:py-3 text-gray-100 rounded ml-2 hover:bg-red-600 transition duration-400 relative">Next <i class="fas fa-angle-right"></i></a>
+                            </li>
+                            <li class="xl:invisible lg:invisible md:invisible block">
+                                <a href="#" class="bg-gray-800 px-2 md:px-6 lg:px-6 xl:px-6 py-2 lg:py-3 xl:py-3 text-gray-100 rounded ml-2 hover:bg-red-600 transition duration-400 relative"><i class="fas fa-angle-right"></i></a>
                             </li>
                         </ul>
                     </div>
