--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         
         
-        <div class="container mx-auto pt-56 pb-56 flex justify-center">
+        <div class="container mx-auto pt-44 flex justify-center">
         <div class="max-w-xs sm:max-w-xl md:max-w-screen-xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-between xl:flex xl:justify-between xl:mx-0 lg:mx-0 md:mx-6 sm:mx-10 xs:mx-12">
         <div class="xl:w-80 lg:w-80 md:max-w-4xl sm:max-w-4xl xs:max-w-4xl border border-gray-200 px-5 py-5 xl:mx-5 lg:mx-5">
             <div class="border-b-2 border-gray-200">
