responsive issue fix

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   
         <div class="">
             <div class="">
-                <div class="xl:px-0 lg:px-0 px-6 flex justify-around items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block  top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50" id="slideNav" style="transition: 0.4s;">
+                <div class="xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between  md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block  top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50" id="slideNav" style="transition: 0.4s;">
                     <a href="#" class="">
-                        <img src="images/logo (1).png" alt="" />
+                        <img class="h-auto w-10 md:h-auto md:w-20 lg:h-auto lg:w-20 xl:h-auto xl:w-20" src="images/logo (1).png" alt="" />
                     </a>
                     <div class="">
                         <ul class="top-nav xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-gray-50 w-full xl:flex xl:items-center xl:justify-center lg:flex lg:justify-center lg:items-center hidden" id="navigation" id="navbar">
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 my-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Home
                                 </a>
@@ -60,21 +60,21 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="flex justify-center items-center relative">
+                    <div class="flex justify-center items-center relative mr-10">
                         <div class="">
-                            <img class="h-6 w-6 mx-3" src="images/search.png" alt="icon" />
+                            <img class="xl:h-6 lg:w-6 lg:h-6 lg:w-6 h-4 w-4 xl:mx-3 lg:mx-3 md:mx-3 mx-2" src="images/search.png" alt="icon" />
                         </div>
                         <div class="overflow-hidden">
                             <a href="#" class="overflow-hidden">
-                                <img class="h-6 w-6 mx-3" src="images/heart.png" alt="icon" />
+                                <img class="xl:h-6 lg:w-6 lg:h-6 lg:w-6 h-4 w-4 xl:mx-3 lg:mx-3 md:mx-3 mx-2" src="images/heart.png" alt="icon" />
                             </a>
                         </div>
                         <div class="">
                             <a href="#" class="">
-                                <img class="h-6 w-6 mx-3" src="images/shopping-cart.png" alt="icon" />
+                                <img class="xl:h-6 lg:w-6 lg:h-6 lg:w-6 h-4 w-4 xl:mx-3 lg:mx-3 md:mx-3 mx-2" src="images/shopping-cart.png" alt="icon" />
                             </a>
                         </div>
-                        <button type="button" class="lg:invisible xl:invisible visible absolute -right-10 text-2xl text-white dark:text-white nav-toggler cursor-pointer text-gray-900 inline-flex lg:hidden p-3 ml-auto hover:text-red-600 transition duration-400" data-target="#navigation"><i class="fas fa-bars"></i></button>
+                        <button type="button" class="lg:invisible xl:invisible visible absolute -right-10 text-2xl text-white dark:text-white nav-toggler cursor-pointer text-gray-900 inline-flex lg:hidden p-3 ml-auto hover:text-red-600 transition duration-400" data-target="#navigation"><i class="fas fa-bars text-gray-500 md:text-md xl:text-md lg:text-md text-sm"></i></button>
                     </div>
                 </div>
             </div>
