--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="app.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="json.js"></script>
         <style>
             .content {
                 max-height: 0;
@@ -21,39 +22,39 @@
     <body>
   
         <div class="">
-            <div class="">
-                <div class="xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between  md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block  top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50" id="slideNav" style="transition: 0.4s;">
+            <div class="flex justify-center items-center">
+                <div class="max-w-xs sm:max-w-xl md:max-w-3xl xl:max-w-full lg:max-w-full mx-atuo xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block  top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50" id="slideNav" style="transition: 0.4s;">
                     <a href="#" class="">
-                        <img class="h-auto w-10 md:h-auto md:w-20 lg:h-auto lg:w-20 xl:h-auto xl:w-20" src="images/logo (1).png" alt="" />
+                        <img class="h-auto w-16 md:h-auto md:w-20 lg:h-auto lg:w-20 xl:h-auto xl:w-20" src="images/logo (1).png" alt="" />
                     </a>
                     <div class="">
-                        <ul class="top-nav xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-gray-50 w-full xl:flex xl:items-center xl:justify-center lg:flex lg:justify-center lg:items-center hidden" id="navigation" id="navbar">
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                        <ul class="top-nav xl:static lg:static absolute flex justify-center items-center left-0 top-20 xl:bg-transparent w-full lg:bg-transparent bg-gray-50 xl:flex xl:items-center xl:justify-center lg:flex lg:justify-center lg:items-center hidden" id="navigation" id="navbar">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2  xl:my-0 lg:my-0 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Home
                                 </a>
                             </li>
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 my-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2  uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     About
                                 </a>
                             </li>
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 my-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-dashed border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Shop
                                 </a>
                             </li>
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 my-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Blog
                                 </a>
                             </li>
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 my-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Pages
                                 </a>
                             </li>
-                            <li class="xl:border-transparent lg:border-transparent border-dashed border-2 border-light-gray-600 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 md:mx-5 lg:mx-5 xl:mx-5 xl:my-0 lg:my-0 my-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Contact
                                 </a>
@@ -311,7 +312,7 @@
                     <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
                         <div class="">
                             <a href="#" class="relative">
-                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
                                 <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
                             </a>
                         </div>
@@ -405,8 +406,7 @@
         </div>
         </div>
         </div>
-
-
+        
         <script type="text/javascript">
             var coll = document.getElementsByClassName("collapsible");
             var i;
