--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
         <div class="">
             <div class="flex justify-center items-center">
-                <div class="max-w-xs sm:max-w-xl md:max-w-3xl xl:max-w-full lg:max-w-full mx-atuo xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block  top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50" id="slideNav" style="transition: 0.4s;">
+                <div class="max-w-xs sm:max-w-xl md:max-w-2xl xl:max-w-full lg:max-w-full mx-atuo xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block  top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50" id="slideNav" style="transition: 0.4s;">
                     <a href="#" class="">
                         <img class="h-auto w-16 md:h-auto md:w-20 lg:h-auto lg:w-20 xl:h-auto xl:w-20" src="images/logo (1).png" alt="" />
                     </a>
@@ -83,7 +83,7 @@
         
         
         <div class="container mx-auto pt-44 flex justify-center">
-        <div class="max-w-xs sm:max-w-xl md:max-w-screen-xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-between xl:flex xl:justify-between xl:mx-0 lg:mx-0 md:mx-6 sm:mx-10 xs:mx-12">
+        <div class="max-w-xs sm:max-w-xl md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-between xl:flex xl:justify-between xl:mx-0 lg:mx-0 md:mx-6 sm:mx-10 xs:mx-12">
         <div class="xl:w-80 lg:w-80 md:max-w-4xl sm:max-w-4xl xs:max-w-4xl border border-gray-200 px-5 py-5 xl:mx-5 lg:mx-5">
             <div class="border-b-2 border-gray-200">
                 <h1 class="pb-3 text-xl font-semibold text-gray-800">Shop By Categories</h1>
