--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
                                     Home
                                 </a>
                             </li>
-                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2  uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t-2 border-gray-400 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2  uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     About
                                 </a>
                             </li>
-                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-dashed border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t-2 border-gray-400 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Shop
                                 </a>
                             </li>
-                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t-2 border-gray-400 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Blog
                                 </a>
                             </li>
-                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t-2 border-gray-400 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Pages
                                 </a>
                             </li>
-                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t border-2 border-light-gray-600 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
+                            <li class="xl:border-transparent xl:bg-transparent lg:bg-transparent bg-gray-100 lg:border-transparent border-t-2 border-gray-400 xl:mx-5 lg:mx-5 mx-0 xl:px-0 lg:px-0 px-2 xl:py-0 lg:py-0 py-2 uppercase font-rubic text-gray-700 text-md transition duration-400 hover:text-red-600 transition duration-400">
                                 <a href="#" class="">
                                     Contact
                                 </a>
@@ -309,6 +309,174 @@
             </div>
             <div class="max-w-4xl mx-auto">
                 <div class="" id="content1">
+                    <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                        <div class="">
+                            <a href="#" class="relative">
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
+                                <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                            </a>
+                        </div>
+                        <div class="lg:ml-5 xl:ml-5 md:ml-4 sm:ml-3">
+                            <a href="#" class="text-xl text-gray-900 font-semibold">Dutchman's Breeches</a>
+                            <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
+                            <p class="text-md text-gray-600 pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipic it, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="flex items-center justify-left">
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-3 group transition duration-400">
+                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                        <div class="">
+                            <a href="#" class="relative">
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
+                                <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                            </a>
+                        </div>
+                        <div class="lg:ml-5 xl:ml-5 md:ml-4 sm:ml-3">
+                            <a href="#" class="text-xl text-gray-900 font-semibold">Dutchman's Breeches</a>
+                            <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
+                            <p class="text-md text-gray-600 pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipic it, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="flex items-center justify-left">
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-3 group transition duration-400">
+                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                        <div class="">
+                            <a href="#" class="relative">
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
+                                <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                            </a>
+                        </div>
+                        <div class="lg:ml-5 xl:ml-5 md:ml-4 sm:ml-3">
+                            <a href="#" class="text-xl text-gray-900 font-semibold">Dutchman's Breeches</a>
+                            <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
+                            <p class="text-md text-gray-600 pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipic it, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="flex items-center justify-left">
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-3 group transition duration-400">
+                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                        <div class="">
+                            <a href="#" class="relative">
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
+                                <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                            </a>
+                        </div>
+                        <div class="lg:ml-5 xl:ml-5 md:ml-4 sm:ml-3">
+                            <a href="#" class="text-xl text-gray-900 font-semibold">Dutchman's Breeches</a>
+                            <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
+                            <p class="text-md text-gray-600 pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipic it, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="flex items-center justify-left">
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-3 group transition duration-400">
+                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                        <div class="">
+                            <a href="#" class="relative">
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
+                                <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                            </a>
+                        </div>
+                        <div class="lg:ml-5 xl:ml-5 md:ml-4 sm:ml-3">
+                            <a href="#" class="text-xl text-gray-900 font-semibold">Dutchman's Breeches</a>
+                            <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
+                            <p class="text-md text-gray-600 pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipic it, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="flex items-center justify-left">
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-3 group transition duration-400">
+                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                        <div class="">
+                            <a href="#" class="relative">
+                                <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt=""/>
+                                <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">-30%</span>
+                            </a>
+                        </div>
+                        <div class="lg:ml-5 xl:ml-5 md:ml-4 sm:ml-3">
+                            <a href="#" class="text-xl text-gray-900 font-semibold">Dutchman's Breeches</a>
+                            <p class="text-gray-500 text-sm font-semibold py-2">$100.00 <span class="text-red-500 font-semibold line-through">$1200.00</span></p>
+                            <p class="text-md text-gray-600 pb-2">
+                                Lorem ipsum dolor sit amet, consectetur adipic it, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat.
+                            </p>
+                            <div class="flex items-center justify-left">
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mr-3 group transition duration-400">
+                                    <i class="far fa-heart text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-shopping-bag text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                                <a href="#" class="bg-gray-100 rounded-md h-14 w-14 flex justify-center items-center hover:bg-red-600 mx-3 group transition duration-400">
+                                    <i class="fas fa-search-plus text-2xl group-hover:text-gray-50 transition duration-400 text-gray-400"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
                         <div class="">
                             <a href="#" class="relative">
