update responsive design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <div class="">
             <div class="flex justify-center items-center bg-gray-50 w-full">
-                <div class="max-w-md sm:max-w-xl md:max-w-2xl xl:max-w-full lg:max-w-full mx-atuo xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50"
+                <div class="max-w-xs md:max-w-2xl xl:max-w-full lg:max-w-full mx-atuo xl:px-0 lg:px-0 xl:px-6 lg:px-6 md:px-6 px-4 flex justify-between md:flex md:justify-around md:items-center lg:flex lg:justify-around lg:items-center xl:flex xl:justify-around items-center py-3 fixed block top-0 w-full xl:border-b-2 border-gray-200 z-40 bg-gray-50"
                     id="slideNav"
                     style="transition: 0.4s;"
                 >
@@ -110,7 +110,7 @@
         </div>
 
         <div class="container mx-auto pt-44 flex justify-center">
-            <div class="max-w-md sm:max-w-xl md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-between xl:flex xl:justify-between xl:mx-0 lg:mx-0 md:mx-6 sm:mx-10 xs:mx-12">
+            <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-between xl:flex xl:justify-between xl:mx-0 lg:mx-0 md:mx-6 sm:mx-10 xs:mx-12">
                 <div class="xl:w-80 lg:w-80 md:max-w-4xl sm:max-w-4xl xs:max-w-4xl border border-gray-200 px-5 py-5 xl:mr-5 lg:mr-5">
                     <div class="border-b-2 border-gray-200">
                         <h1 class="pb-3 text-xl font-semibold text-gray-800">Shop By Categories</h1>
@@ -330,7 +330,7 @@
                     </div>
                     <div class="w-full">
                         <div class="w-full" id="content1">
-                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left pb-7">
                                 <div class="xs:pr-0 mr-5 sm:pr-4 md:pr-0 lg:pr-0 xl:pr-0">
                                     <a href="#" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
@@ -357,7 +357,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left pb-7">
                                 <div class="xs:pr-0 mr-5 sm:pr-4 md:pr-0 lg:pr-0 xl:pr-0">
                                     <a href="#" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
@@ -385,7 +385,7 @@
                                 </div>
                             </div>
 
-                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left pb-7">
                                 <div class="xs:pr-0 mr-5 sm:pr-4 md:pr-0 lg:pr-0 xl:pr-0">
                                     <a href="#" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
@@ -413,7 +413,7 @@
                                 </div>
                             </div>
 
-                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left pb-7">
                                 <div class="xs:pr-0 mr-5 sm:pr-4 md:pr-0 lg:pr-0 xl:pr-0">
                                     <a href="#" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
@@ -441,7 +441,7 @@
                                 </div>
                             </div>
 
-                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left pb-7">
                                 <div class="xs:pr-0 mr-5 sm:pr-4 md:pr-0 lg:pr-0 xl:pr-0">
                                     <a href="#" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
@@ -469,7 +469,7 @@
                                 </div>
                             </div>
 
-                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left sm:flex sm:justify-left pb-7">
+                            <div class="md:flex md:justify-left lg:flex lg:justify-left xl:flex xl:justify-left pb-7">
                                 <div class="xs:pr-0 mr-5 sm:pr-4 md:pr-0 lg:pr-0 xl:pr-0">
                                     <a href="#" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-1.jpg" alt="" />
@@ -1057,7 +1057,7 @@
 
         <div class="container-fluid bg-gray-100 py-20 mt-20">
             <div class="container mx-auto">
-                <div class="max-w-md md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto">
+                <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto">
                     <div class="">
                         <div class="lg:flex lg:justify-around xl:flex xl:justify-between">
                             <div class="lg:max-w-xs xl:max-w-sm leading-loose">
@@ -1161,7 +1161,7 @@
         </div>
         <div class="container-fluid bg-gray-200">
             <div class="container mx-auto">
-                <div class="max-w-xs sm:max-w-xl md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto py-5">
+                <div class="md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto py-5">
                     <div class="lg:flex lg:items-center lg:justify-between xl:items-center xl:flex xl:justify-between">
                         <div class="">
                             <p class="text-gray-800">Copyright © Phuler. All Right Reserved.</p>
