fixed checked btn redesign

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
                         <h1 class="text-gray-800 font-rubic dark:text-gray-800">Logo</h1>
                     </a>
-                    <div class="md:ml-0 lg:ml-36 xl:ml-56">
+                    <div class="md:ml-1 lg:ml-36 xl:ml-56">
                         <div class="flex justify-end items-center space-x-2">
                             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="text-yellow-500 dark:text-gray-400 ransition-colors duration-200">
                                 <path
@@ -33,8 +33,8 @@
                             <div class="">
                                 <input type="checkbox" name="" id="toggle" class="hidden" />
                                 <label for="toggle" class="cursor-pointer">
-                                    <div class="xl:w-16 lg:h-7 lg:w-16 lg:h-7 w-10 h-5 flex items-center bg-green-400 dark:bg-gray-800 rounded-full p-1">
-                                        <div class="toggle-dot  xl:w-6 lg:h-6 lg:w-6 lg:h-6 w-5 h-5 bg-white rounded-full shadow-md transform transition duration-500 ease-in-out"></div>
+                                    <div class="w-10 h-6 flex items-center bg-green-400 dark:bg-gray-800 rounded-full p-1">
+                                        <div class="toggle-dot w-4 h-4 bg-white rounded-full shadow-md transform transition duration-500 ease-in-out"></div>
                                     </div>
                                 </label>
                             </div>
@@ -828,7 +828,7 @@
                 <div class="md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto py-5">
                     <div class="lg:flex lg:items-center lg:justify-between xl:items-center xl:flex xl:justify-between">
                         <div class="">
-                            <p class="text-gray-800 dark:text-gray-100">Copyright © Phuler. All Right Reserved.</p>
+                            <p class="text-gray-800 dark:text-gray-800">Copyright © Phuler. All Right Reserved.</p>
                         </div>
                         <div class="">
                             <a href="#" class="">
