--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             </div>
                         </div>
                         <div class="border-b-2 border-gray-200 py-5 dark:border-gray-600">
-                            <h1 class="pb-3 text-xl font-semibold text-gray-800">Price Filter</h1>
+                            <h1 class="pb-3 text-xl font-semibold text-gray-800 dark:text-gray-100">Price Filter</h1>
                             <p class="m-0 pb-5">Range: $100.00 - $1,300.00</p>
                             <div class="flex justify-center items-center">
                                 <div x-data="range()" x-init="mintrigger(); maxtrigger()" class="relative max-w-xl w-full">
@@ -270,10 +270,10 @@
                                   
                                   <div class="flex justify-between items-center py-5">
                                     <div>
-                                      <input type="text" maxlength="5" x-on:input="mintrigger" x-model="minprice" class="px-3 py-2 border border-gray-200 rounded w-24 text-center">
+                                      <input type="text" maxlength="5" x-on:input="mintrigger" x-model="minprice" class="px-3 py-2 border border-gray-200 rounded w-24 dark:border-gray-600 text-center dark:bg-gray-800 text-gray-900 dark:text-gray-100">
                                     </div>
                                     <div>
-                                      <input type="text" maxlength="5" x-on:input="maxtrigger" x-model="maxprice" class="px-3 py-2 border border-gray-200 rounded w-24 text-center">
+                                      <input type="text" maxlength="5" x-on:input="maxtrigger" x-model="maxprice" class="px-3 py-2 border border-gray-200 rounded w-24 dark:border-gray-600 text-center dark:bg-gray-800 text-gray-900 dark:text-gray-100">
                                     </div>
                                   </div>
                                   
